--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="finanzas" />
-    <meta name="Autor" content="Mayli"/>
+    <meta name="Autor" content="Mayli" />
     <link rel="stylesheet" href="style.css" />
     <title>Money minder</title>
     <style>
@@ -839,7 +839,7 @@
     <script src="https://cdn.emailjs.com/sdk/3.2/email.min.js"></script>
     <script>
       (function(){
-        emailjs.init('ajeggNLZZg0_ryM6y');
+        emailjs.init('ajeggNLZZg0_ryM6y'); // Your user ID here
       })();
     </script>
 </head>
@@ -1216,7 +1216,7 @@
             <label for="contact-message">Mensaje</label>
             <textarea id="contact-message" name="message" rows="5" placeholder="Escribe tu mensaje aquí..." required aria-required="true"></textarea>
           </div>
-          <button type="submit">Enviar Mensaje</button>
+          <button type="submit" id="contact-submit">Enviar Mensaje</button>
           <div class="confirmation" id="contact-confirmation" role="alert" aria-live="polite" style="display:none;"></div>
         </form>
       </div>
@@ -2278,6 +2278,7 @@ Ofertas relacionadas:
 
       const contactForm = document.getElementById('contact-form');
       const contactConfirmation = document.getElementById('contact-confirmation');
+      const submitButton = document.getElementById('contact-submit');
 
       contactForm.addEventListener('submit', function(event) {
         event.preventDefault();
@@ -2315,7 +2316,6 @@ Ofertas relacionadas:
         };
 
         // Disable submit button while sending
-        const submitButton = contactForm.querySelector('button[type="submit"]');
         submitButton.disabled = true;
         submitButton.textContent = 'Enviando...';
 
